<?xml version="1.0"?>
<package format="3">
  <name>px4_indoor_navigation</name>
  <version>0.0.0</version>
  <description>The indoor_nav package for ROS 2</description>

  <maintainer email="odroid@todo.todo">odroid</maintainer>
  <license>TODO</license>

 <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
